fixed some padding issues to make sure eth is aligned

--- a/DexSecondWebsite/newstyle.css
+++ b/DexSecondWebsite/newstyle.css
@@ -19,7 +19,7 @@ nav p{
     font-family: arial;
     color: #ffffff;
     font-size: 24px;
-    line-height: 55px;
+    line-height: 60px;
     float: left;
     padding: 0px 20px;
 }
@@ -39,7 +39,7 @@ nav ul li a{
     font-family: arial, serif;
     color: #222222;
     font-size: 19px;
-    padding: 17px 14px;
+    padding: 19px 14px;
     text-decoration: none;
 }
 
@@ -52,7 +52,7 @@ nav ul li ul{
     display: none;
     position: absolute;
     background-color: white;
-    padding: 10px;
+    padding: 0px;
     border-radius: 0px 0px 10px 10px;
 }
 
@@ -69,7 +69,7 @@ nav ul li ul li a {
     padding: 9px 14px;
 }
 
-nav ul li ul li a:hover {
+nav ul li ul li:hover {
     background-color: #f3f3f3;
 }
 
